[tool.isort]
profile = "black"

[tool.pyright]
include = ["."]
exclude = [
    "**/node_modules",
    "**/__pycache__"
]
venvPath = ".venv"
verboseOutput = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"
max-complexity = 10
extend-exclude = ".venv,node_modules,.git"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-vvv"
norecursedirs = [
    ".git",
    "__pycache__"
]
python_files = [
    "test_*.py"
]

[tool.poetry]
name = "prox"
version = "0.1.0"
description = ""
authors = ["tamanobi <tamanobi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
pyproject-flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
